--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <version>2.13.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>2.13.3</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
