--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,6 @@
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
                     </dependency>
-                    <dependency>
-                        <groupId>io.qameta.allure</groupId>
-                        <artifactId>allure-java-commons</artifactId>
-                        <version>2.13.3</version>
-                    </dependency>
                 </dependencies>
             </plugin>
 
@@ -97,26 +92,26 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-java-commons</artifactId>
             <version>2.13.3</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>4.3.0</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>4.2.0</version>
-            <scope>compile</scope>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>4.2.0</version>
+            <!--scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-schema-validator</artifactId>
-            <version>4.3.0</version>
-            <scope>test</scope>
+            <version>4.2.0</version>
+            <!--<scope>test</scope>-->
         </dependency>
+
     </dependencies>
 
 </project>
